Rpc update (#4)
* update rpc spec and its impl

* tests & gh action

* update cli

* update gh action

* share token between steps

* gh fix

* gh fix

* gh fix

* gh fix

* gh fix

* gh fix

* gh fix

* gh fix

* gh fix
